--- a/Learn_WebServer/data/laypin.html
+++ b/Learn_WebServer/data/laypin.html
@@ -108,7 +108,6 @@
         var gateway = `ws://${window.location.hostname}/ws`;
         var websocket;
 
-        // Chạy hàm khởi tạo khi trang được tải xong
         window.addEventListener('load', initWebSocket);
 
         function initWebSocket() {
@@ -116,20 +115,18 @@
             websocket = new WebSocket(gateway);
             websocket.onopen = onOpen;
             websocket.onmessage = onMessage;
-            // Thêm onclose để tự động kết nối lại nếu mất mạng
             websocket.onclose = function(event) {
                 console.log('Connection closed');
-                setTimeout(initWebSocket, 2000); // Thử kết nối lại sau 2 giây
+                setTimeout(initWebSocket, 2000);
             };
         }
 
-        // Khi kết nối thành công, gửi yêu cầu
         function onOpen(event) {
             console.log('Connection opened');
+            // Vẫn gửi yêu cầu ban đầu để lấy trạng thái ngay lập tức
             websocket.send('getPickupSlot');
         }
 
-        // Khi nhận được tin nhắn từ server
         function onMessage(event) {
             console.log('Message from server: ', event.data);
             var data;
@@ -139,9 +136,9 @@
                 console.error("Error parsing JSON:", e);
                 return;
             }
-            
-            // Chỉ xử lý tin nhắn có type là 'pickupSlot'
-            if (data.type === 'pickupSlot') {
+
+            // Xử lý CẢ tin nhắn trả lời VÀ tin nhắn cập nhật tự động
+            if (data.type === 'pickupSlot' || data.type === 'pickupSlotUpdate') {
                 document.getElementById('pin-slot').innerText = data.slot;
             }
         }
